clusters/onprem-dev/pubg-helper/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: pubg-helper
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
