clusters/onprem-dev/pubg-helper/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: pubg-helper
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: gateway
  hostnames:
    - app.yongun.shop
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: frontend
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
